# TAP

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.agent-sandbox  PRD.md  README.md  conversation_summary_real-ai-20250921-035537.md  conversation_summary_real-ai-20250921-040238.md  docker-compose.yml  fix_validators.py  pyproject.toml  quickstart_real.md  real_ai_tab.py  test_final_validation.py  test_implementation.py  test_simple.py
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style.md  post_task_steps.md  project_overview.md  suggested_commands.md
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md
config/: default.yaml  policies.yaml
observability/: otel-collector-config.yaml  prometheus.yml
specs/001-prd-md/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prd-md/contracts/: agent-interface.json  mcp-orchestrator.json
specs/002-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-/contracts/: conversation_session_methods.py
specs/003-tap-conversationsession-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-tap-conversationsession-api/contracts/: missing_methods.py  service_interfaces.py
src/models/: audit_record.py  conversation_session.py  orchestration_state.py  policy_configuration.py
src/services/: codex_adapter.py  policy_enforcer.py  session_manager.py
src/tab/: __init__.py
src/tab/cli/: main.py
src/tab/lib/: config.py  logging_config.py  metrics.py  observability.py
src/tab/models/: __init__.py  agent_adapter.py  agent_config.py  audit_record.py  conversation_session.py  orchestration_state.py  policy_configuration.py  service_config.py  turn_message.py
src/tab/services/: agent_registry.py  base_agent_adapter.py  claude_code_adapter.py  conversation_orchestrator.py  mcp_orchestrator_server.py  policy_enforcer.py  session_manager.py
src/tab/services/interfaces/: policy_validator.py  service_lifecycle.py  session_service.py
tests/contract/: test_agent_health.py  test_agent_interface.py  test_mcp_orchestrator.py  test_missing_methods_contract.py  test_orchestrator_audit_log.py  test_orchestrator_contract.py  test_orchestrator_list_agents.py  test_orchestrator_send_message.py  test_orchestrator_session_status.py  test_orchestrator_start_conversation.py  test_policy_enforcer_contract.py  test_session_manager_contract.py  test_unified_api_contract.py
tests/integration/: test_bug_reproduction_scenario.py  test_code_review_scenario.py  test_conversation_flow.py  test_dynamic_agent_config.py  test_missing_methods_flow.py  test_performance_observability.py  test_permission_enforcement.py  test_service_constructors.py  test_unified_api_flow.py
tests/performance/: test_service_performance.py
tests/unit/: test_message_processing.py  test_missing_methods.py  test_models.py  test_performance.py  test_policy_validation.py  test_service_config.py  test_service_interfaces.py  test_session_management.py
